<resources>
    <string name="app_name">DatawedgeBenchmark</string>

    <!-- Layout strings -->
    <string name="label_nb_scans">SCANS</string>
    <string name="label_time_elapsed">TIME ELAPSED</string>
    <string name="label_scans_per_second">SCANS/S</string>
    <string name="label_scanner_device">SCANNER DEVICE</string>
    <string name="label_activity_log">ACTIVITY LOG</string>
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="default_zero">0</string>
    <string name="default_time">00:00:00.000</string>
    <string name="default_na">N/A</string>

    <!-- Button labels -->
    <string name="btn_start">Start</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_burst_mode">Burst Mode</string>
    <string name="btn_normal_mode">Normal Mode</string>
    <string name="btn_stop_benchmark">Stop Benchmark</string>
    <string name="btn_start_benchmark">Start Benchmark</string>

    <!-- Menu -->
    <string name="menu_reset_profile">Reset Profile</string>

    <!-- Scanner selection -->
    <string name="scanner_auto">AUTO</string>

    <!-- Status messages -->
    <string name="msg_profile_already_exists">Profile already exists.</string>
    <string name="msg_profile_creation_success">Profile creation of: %s succeeded.</string>
    <string name="msg_profile_reset_success">Profile reset successful.</string>
    <string name="msg_resetting_profile">Resetting profile</string>

    <!-- Error messages -->
    <string name="msg_error_create_profile">Error while trying to create profile: %s</string>
    <string name="msg_error_reset_profile">Error while trying to reset profile: %s</string>
    <string name="msg_error">Error: %s</string>
    <string name="msg_error_message">ErrorMessage: %s</string>
    <string name="msg_error_switch_scanner">Error while trying to switch to new scanner: %s</string>
    <string name="msg_error_scanner_list">Failed to get the list of supported scanner devices! Please close and restart the application.</string>
    <string name="msg_error_burst_mode">Error while trying to set scanner to burst mode</string>
    <string name="msg_error_normal_mode">Error while trying to set scanner to normal mode</string>

    <!-- Scanner status messages -->
    <string name="msg_scanner_connected">Scanner is connected.</string>
    <string name="msg_scanner_disabled">Scanner is disabled.</string>
    <string name="msg_scanner_disconnected">Scanner is disconnected.</string>
    <string name="msg_scanner_scanning">Scanner is scanning.</string>
    <string name="msg_scanner_waiting">Scanner is waiting.</string>
    <string name="msg_scanner_idle">Scanner is idle.</string>
    <string name="msg_scanner_selected">New scanner selected with success: %s</string>
    <string name="msg_scanner_burst_mode_success">Scanner set to burst mode successfully</string>
    <string name="msg_scanner_normal_mode_success">Scanner set to normal mode successfully</string>

    <!-- Scan results -->
    <string name="msg_scan_success">Success scanning %s barcode.</string>
    <string name="msg_scan_source">Source: %s</string>
    <string name="msg_scan_typology_data">Typology: %1$s, Data: %2$s</string>

    <!-- Benchmark messages -->
    <string name="msg_waiting_first_scan">Waiting for first scan to start Benchmark.</string>
    <string name="msg_benchmark_stopped">Benchmark stopped.</string>

    <!-- Enumeration messages -->
    <string name="msg_enumerating_scanners">Enumerating scanners.</string>
    <string name="msg_enumeration_success">Scanner enumeration succeeded, found %d scanners.</string>
    <string name="msg_enumeration_timeout">Timeout while trying to enumerate scanners</string>

    <!-- Profile checker messages -->
    <string name="msg_profile_check_timeout">Timeout while checking if profile exists</string>

    <!-- Status checker -->
    <string name="msg_status_checker_setup">Setting up scanner status checking on package: %s.</string>
</resources>
